added tests and fixed some mistakes.